v4.2.13 (work-in-progress)
     * Add ncrystal_minimc function in C-API, which interacts solely via the
       four relevant cfg-strings (material, source, geometry, engine) and
       returns results via JSON. This provides a more flexible and maintainable
       interface than the existing ncrystal_runmmcsim_stdengine which is thus
       deprecated. Moving forward, the MiniMC thus accepts same cfg-strings in
       all APIs (C, C++, Python, cmdline).
     * Add support for new "scenario cfg-string" for the MiniMC framework which
       is a short and more human readable cfg-string which selects typical
       simulation scenarios. To keep everything simple, understandable, and
       maintainable, the parser simply transforms the scenario cfg-string into
       the three more fundamental cfg-strings for source, geometry, and engine.
     * Add new source generator "circular" for the MiniMC framework, which
       allows modelling of a circular beam. Specifically, neutrons can be
       generated uniformly on a disk of a given radius whose normal coincides
       with the neutron direction. In the case where the radius is 0, this
       generator has identical output to the "constant" generator. The advantage
       of this new generator is that it can be used to illuminate a spherical
       sample uniformly, and is for instance intended for investigation of
       extinction effects in diffraction with spherical grains.
     * Make the Python Histogram classes returned by the MiniMC framework much
       more feature complete, adding several features intended to make
       subsequent data analysis easier.
     * Split out and mature the results objects actually returned by the MiniMC
       framework in the Python API.
     * Fix several issues in the C++ templates used to implement the histograms
       used by the MiniMC framework. These issues all concerned features not
       actually used by the MiniMC in past releases (fixes github issue #300).